Second Commit Test

--- a/src/app/modules/landing/components/header/header.component.html
+++ b/src/app/modules/landing/components/header/header.component.html
@@ -1,1 +1,14 @@
-<p>header works!</p>
+<!-- Home or Welcome Section -->
+<header id = "start">
+
+  <div class = "head-container">
+    <p class = "intro col1"><span>Welcome to</span></p>
+    <h1 class = "name">
+      <span style = "color:red">Niko's</span>
+    </h1>
+    <h1 class = "name col1">Bistro</h1>
+    <h3 class = "intro col2">
+      <span >Dine-in • Takeout • Pick up • Delivery • Catering</span>
+    </h3>
+  </div>
+</header>
