Added json files to simulate backend calls to database

--- a/src/app/modules/ordering/components/order-dashboard/order-dashboard.component.html
+++ b/src/app/modules/ordering/components/order-dashboard/order-dashboard.component.html
@@ -1,1 +1,15 @@
-<p>order-dashboard works!</p>
+<div>
+  <header id = "modal-header">
+    <div id = "modal-header-title">
+      <h1>Title</h1>
+    </div>
+
+    <div>
+      <div class = "modal-tab">order</div>
+      <div class = "modal-tab">info</div>
+      <div class = "modal-tab">checkout</div>
+    </div>
+  </header>
+
+  <app-menu></app-menu>
+</div>
