--- a/src/app/modules/ordering/components/menu-item/menu-item.component.html
+++ b/src/app/modules/ordering/components/menu-item/menu-item.component.html
@@ -1,1 +1,8 @@
-<p>menu-item works!</p>
+<div class="card">
+  <div class = "card-title">
+    <p></p>
+  </div>
+  <div class = "card-desc">
+    <p></p>
+  </div>
+</div>
