--- a/src/app/modules/ordering/components/menu/menu.component.html
+++ b/src/app/modules/ordering/components/menu/menu.component.html
@@ -1,2 +1,8 @@
 
-<app-menu-category></app-menu-category>
+<div *ngFor = "let menucat of menuCategories$ | async">
+  <div *ngIf = "(menuItems$ | async)">
+    <h1>{{menucat.name}}</h1>
+    <app-menu-category [catId] = "menucat.id" [menuItems$] = "menuItems$"></app-menu-category>
+  </div>
+
+</div>
