--- a/src/app/modules/ordering/components/menu-item/menu-item.component.html
+++ b/src/app/modules/ordering/components/menu-item/menu-item.component.html
@@ -1,8 +1,9 @@
 <div class="card">
   <div class = "card-title">
-    <p></p>
+    <p>{{menuItem.name}}</p>
+    <p>{{menuItem.price}}</p>
   </div>
   <div class = "card-desc">
-    <p></p>
+    <p>{{menuItem.desc}}</p>
   </div>
 </div>
