--- a/src/app/modules/ordering/components/order-dashboard/order-dashboard.component.scss
+++ b/src/app/modules/ordering/components/order-dashboard/order-dashboard.component.scss
@@ -1,3 +1,7 @@
+#ordering-modal {
+  padding: 80px 20px;
+}
+
 #modal-header {
   height: 80px;
   width: 100%;
@@ -5,12 +9,14 @@
   justify-content: space-between;
   align-items: center;
   position: fixed;
+  background-color: #f8f8f8;
 }
 
 #modal-header-title {
   height: 100%;
   width: auto;
-  padding: 20px;
+  padding: 0 20px;
+
 }
 
 .modal-tab {
