--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+  box-sizing: border-box;
+}
+
+/* -----------------------Background Settings for the site----------- */
+html,body {
+  /*height: 100%;*/
+  margin: 0;
+  max-width: 100%;
+  overflow-x:hidden;
+}
+
+body {
+  background-image: url("assets/images/baked-beer-cheese.jpg");
+  background-attachment: fixed;
+  height: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
