Continuation of styling

--- a/src/app/modules/ordering/components/menu-category/menu-category.component.html
+++ b/src/app/modules/ordering/components/menu-category/menu-category.component.html
@@ -1,7 +1,10 @@
-<div *ngFor = "let menuItem of menuItems$ | async">
-  <div *ngIf = "menuItem.catid === catId">
-    <app-menu-item [menuItem]="menuItem" ></app-menu-item>
+<section id = "menu-item-container">
+  <div *ngFor = "let menuItem of menuItems$ | async" class = "item-cont">
+    <div *ngIf = "menuItem.catid === catId">
+      <app-menu-item [menuItem]="menuItem" ></app-menu-item>
+    </div>
   </div>
-</div>
+</section>
+
 
 
