--- a/src/app/modules/ordering/components/order-dashboard/order-dashboard.component.scss
+++ b/src/app/modules/ordering/components/order-dashboard/order-dashboard.component.scss
@@ -1,5 +1,12 @@
-#ordering-modal {
+
+
+* {
+  font-family: 'Fjalla One', sans-serif;
+}
+
+#menu-tab {
   padding: 80px 20px;
+  width: 100%;
 }
 
 #modal-header {
