--- a/src/app/modules/ordering/components/order-dashboard/order-dashboard.component.html
+++ b/src/app/modules/ordering/components/order-dashboard/order-dashboard.component.html
@@ -1,15 +1,16 @@
 <header id = "modal-header">
-  <div id = "modal-header-title">
-    <h1>Title</h1>
-  </div>
+    <div id = "modal-header-title">
+      <h1>Title</h1>
+    </div>
 
-  <div>
-    <div class = "modal-tab">order</div>
-    <div class = "modal-tab">info</div>
-    <div class = "modal-tab">checkout</div>
-  </div>
+    <div>
+      <div class = "modal-tab">order</div>
+      <div class = "modal-tab">info</div>
+      <div class = "modal-tab">checkout</div>
+    </div>
 </header>
-<div id = "ordering-modal">
-
+<div id = "menu-tab">
   <app-menu></app-menu>
 </div>
+
+
