--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 <app-navigationbar></app-navigationbar>
 <app-header></app-header>
 <app-about-niko></app-about-niko>
-<app-menu></app-menu>
+<app-menu-landing></app-menu-landing>
