added rest of landing page and fixed section separator

--- a/src/app/modules/landing/components/about-niko/about-niko.component.html
+++ b/src/app/modules/landing/components/about-niko/about-niko.component.html
@@ -1,4 +1,6 @@
 <!-- About us Section -->
+<div id="section1">
+  <app-section-separator></app-section-separator>
   <div class = "about-us-cont">
     <div class = "pic-cont"></div>
     <div class = "about-paragraph-cont">
@@ -42,3 +44,4 @@
       <h1> 416-479-1111 </h1>
     </div>
   </div>
+</div>
