--- a/src/app/modules/landing/components/menu/menu.component.html
+++ b/src/app/modules/landing/components/menu/menu.component.html
@@ -1,5 +1,6 @@
 <!-- Menu Section -->
-<!--<app-section-separator></app-section-separator> -->
+<div id="section2">
+  <app-section-separator></app-section-separator>
   <div class = "sect-title">
     <h1> Menu Favourites</h1>
     <p>Experience our specialty food</p>
@@ -156,8 +157,8 @@
         <h1>To see our full menu, click here!</h1>
       </div>
       <div class = "button-cont">
-        <div class = "menu-button">View Now</div>
+       <div class = "menu-button">View Now</div>
       </div>
     </div>
   </div>
-
+</div>
