--- a/src/app/components/section-separator/section-separator.component.scss
+++ b/src/app/components/section-separator/section-separator.component.scss
@@ -1,7 +1,13 @@
-#section1 {
-  width: 100%;
-  height: auto;
-  background-color: #F7F7F7;
-  background-size: 100%;
-  margin: 0;
+.section-cont {
+  width:100%;
+  height: 80px;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-symbol {
+  height: 75px;
+  width: auto;
 }
