--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,4 @@
 <app-header></app-header>
 <app-about-niko></app-about-niko>
 <app-menu-landing></app-menu-landing>
+<app-contact-us></app-contact-us>
