contact page updated and footer added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,5 @@
 <app-header></app-header>
 <app-about-niko></app-about-niko>
 <app-menu-landing></app-menu-landing>
+<app-contact-us></app-contact-us>
+<app-footer></app-footer>
