--- a/src/app/modules/landing/components/contact-us/contact-us.component.html
+++ b/src/app/modules/landing/components/contact-us/contact-us.component.html
@@ -1,19 +1,28 @@
-<!-- contact Section -->
+<!-- Contact us section -->
+<section id = "contact-section">
+  <div id = "contact-section-content">
+    <h1>Contact us</h1>
+    <h2>How did we do?</h2>
+    <p>Let us know</p>
+    <div id = "find-us">
+      <form id = "contact-us-form">
+        <input type="text" placeholder = "Your name">
+        <br>
+        <input type="text" placeholder = "Email">
+        <br>
+        <textarea name="message" placeholder = "Message"></textarea>
+        <br>
+        <input type="submit" value = "Send" id = "submit-button">
+      </form>
 
-<div id = "section3">
-  <app-section-separator></app-section-separator>
+      <div id = "general-info">
 
-  <div class = "section3-inner">
-    <div class = "item1">
-      <h1>Contact Us!</h1>
+        <p><i class="fas fa-map-marked icon"></i><strong>Niko's Bistro Restaurant</strong><br>Brampton, Ontario</p>
+        <p><i class="fas fa-phone icon" style = "color: #f7f7f7;"></i>416 479 1111</p>
+        <p><i class="fas fa-envelope icon" style = "color: #f7f7f7;"></i>NikosBistro@placeholder.com</p>
+      </div>
     </div>
-    <div class = "item2">
-      <h1>How did we do?</h1>
-    </div>
-    <div class = "item3">
 
-    </div>
-
-    <div class = "item4"></div>
+    <p style = "margin: 0;"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2884.037055853953!2d-79.66458068407802!3d43.70977897911945!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3c1b3bc2e2e3%3A0x352624f14d4a3da9!2sNikos+Bistro!5e0!3m2!1sen!2sca!4v1548007965113" width="900" height="300" frameborder="0" style="border:0; margin-bottom: 50px;" allowfullscreen></iframe></p>
   </div>
-</div>
+</section>
