--- a/src/app/modules/landing/components/contact-us/contact-us.component.scss
+++ b/src/app/modules/landing/components/contact-us/contact-us.component.scss
@@ -1,68 +1,101 @@
-/* --------------------------- Contact Section ----------------------- */
-/* ================ Section Settings ============== */
-#section3 {
+/* Contact Us Section */
+
+#contact-section {
+  height: auto;
   width: 100%;
-  height: 980px;
-  background-color: #F7F7F7;
+  background-color: rgb(100, 100, 100);
+}
+
+#contact-section-content {
+  height: auto;
+  width: 900px;
+  margin: auto;
+  text-align: center;
+}
+
+#contact-section-content h1 {
+  font-size: 60px;
+  color: #f7f7f7;
+  margin: 0;
+  padding: 50px;
+  border-bottom: 1px solid #f7f7f7;
+}
+
+#contact-section-content h2 {
+  font-size: 30px;
+  color: #f7f7f7;
+  margin-bottom: 0;
+}
+
+#contact-section-content p {
+  font-size: 20px;
+  color: #f7f7f7;
   margin: 0;
 }
 
-.section3-inner {
+#find-us {
+  height: auto;
+  width: 900px;
+  margin: 50px 0;
+
+  display: flex;
+  justify-content: space-between;
+}
+
+#contact-us-form {
+  height: auto;
+  width: 400px;
+}
+
+#contact-us-form input {
+  background-color: #f7f7f7;
+  color: rgb(100,100,100);
+  width: 400px;
+  border: 0;
+  border-radius: 5px;
+  padding: 5px;
   box-sizing: border-box;
-  height: 700px;
-  width: 80%;
-  margin: 100px auto;
-  padding:100px;
-  background-color: white;
-  box-shadow: 5px 5px 5px grey;
-
-  display: grid;
-  grid-template-rows: repeat(4, 1fr [row-start]);
-  grid-template-columns: repeat(5, 1fr [col-start]);
-  grid-row-gap: 20px;
-  grid-column-gap: 20px;
-
+  margin-top: 20px;
 }
 
-.item1 {
-  grid-column: 1 / span 3;
-  grid-row: 1 / span 1;
-
-  display: flex;
-  align-items: flex-end;
-  border-bottom: 10px solid black;
+#contact-us-form textarea {
+  background-color: #f7f7f7;
+  color: rgb(100,100,100);
+  border-radius: 5px;
+  padding: 5px;
+  box-sizing: border-box;
+  margin-top: 20px;
+  width:400px;
+  height:200px;
 }
 
-.item1 h1 {
-  font-size: 80px;
-  font-family: 'Italiana';
-  margin: 0;
+#contact-us-form #submit-button {
+  font-size: 15px;
+  background-color: rgb(100,100,100);
+  border: 1px solid #f7f7f7;
+  color: #f7f7f7;
+  margin: 20px 75px;
+  padding: 10px 0;
+  width: 150px;
 }
 
-.item2 {
-  grid-column: 4 / span 2;
-  grid-row: 1 / span 1;
-  border-bottom: 10px solid black;
-
-  display: flex;
-  align-items: flex-end;
+#contact-us-form #submit-button:hover {
+  background-color: #f7f7f7;
+  color: rgb(100,100,100);
 }
 
-.item2 h1 {
-  font-family: 'Italiana';
-  margin: 0;
-  font-size: 40px;
-
+#general-info {
+  width: 400px;
+  height: 200px;
+  text-align: center;
+  color: #f7f7f7;
+  font-size: 20px;
+  position: relative;
+  border-bottom: 1px solid #f7f7f7;
 }
 
-.item3 {
-  background-color: grey;
-  grid-column: 1 / span 3;
-  grid-row: 2 / span 3;
-}
-
-.item4 {
-  background-color: grey;
-  grid-column: 4 / span 2;
-  grid-row: 2 / span 3;
+#general-info .icon {
+  color: #f7f7f7;
+  position: absolute;
+  left: 0;
 }
