--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,4 @@
 <app-about-niko></app-about-niko>
 <app-menu-landing></app-menu-landing>
 <app-contact-us></app-contact-us>
+<app-footer></app-footer>
