Added a MatDialog open feature when requesting for ordering menu

--- a/src/app/modules/landing/components/menu/menu.component.html
+++ b/src/app/modules/landing/components/menu/menu.component.html
@@ -157,7 +157,7 @@
         <h1>To see our full menu, click here!</h1>
       </div>
       <div class = "button-cont">
-       <div class = "menu-button">View Now</div>
+       <div class = "menu-button" (click) = "openOrderDashboard()">View Now</div>
       </div>
     </div>
   </div>
