--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,14 @@
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 /* You can add global styles to this file, and also import other style files */
-*{
+* {
   box-sizing: border-box;
 }
 
 /* -----------------------Background Settings for the site----------- */
 html,body {
-  /*height: 100%;*/
+  height: 100%;
   margin: 0;
+  padding: 0;
   max-width: 100%;
   overflow-x:hidden;
 }
@@ -20,5 +22,3 @@ body {
   background-size: cover;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
