--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 /* You can add global styles to this file, and also import other style files */
 * {
   box-sizing: border-box;
@@ -6,7 +6,7 @@
 
 /* -----------------------Background Settings for the site----------- */
 html,body {
-  /*height: 100%;*/
+  height: 100%;
   margin: 0;
   padding: 0;
   max-width: 100%;
@@ -22,5 +22,3 @@ body {
   background-size: cover;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
