Completed the front facing of the landing page, menu section

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,7 @@
   <div id = "footer-inner">
     <figure id = "footer-figureOne">
       <img src = "../../assets/images/section-symbol.png" alt = "sect-start-symbol" style = "height: 50px; width: auto;">
-      <figcaption>2019 Niko's Bistro | Pixel House Studios</figcaption>
+      <figcaption>2019 Niko's Bistro | Pixelhouse Studios</figcaption>
     </figure>
 
     <figure id = "footer-figureTwo">
