Added header order button to get ready for the routing module to navigate to the menu section.

--- a/src/app/modules/landing/components/header/header.component.html
+++ b/src/app/modules/landing/components/header/header.component.html
@@ -12,5 +12,9 @@
       <span >Dine-in • Takeout • Pick up • Delivery • Catering</span>
     </h3>
   </div>
+
+  <div class = "button-cont">
+    <div class = "menu-button">Order Now</div>
+  </div>
 </header>
 
